Bugfix: change path_to_analyzed + updated readme and images

--- a/PlotBot/PlotBot.ipynb
+++ b/PlotBot/PlotBot.ipynb
@@ -16,8 +16,6 @@
     "\n",
     "A plot from the sentiment analysis is then tweeted to the PlotBot5 twitter feed. See below for examples of scatter plots you will generate:\n",
     "\n",
-    "![@juanitasoranno.png](images/@juanitasoranno.png)\n",
-    "\n",
     "Hints, requirements, and considerations:\n",
     "\n",
     "* Your bot should scan your account every __five minutes__ for mentions.\n",
@@ -47,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +294,7 @@
     "    columns_analyzed = ['user_id','user_name']\n",
     "    columns_sentiment = ['user_id','date','tweet','compound','positive','negative','neutral']\n",
     "    print('worker: trying to read analyzed CSV')\n",
-    "    analyzed_df = rwCSV(path,columns=columns_analyzed)\n",
+    "    analyzed_df = rwCSV(path_to_analyzed,columns=columns_analyzed)\n",
     "\n",
     "    #got through not analyzed rows\n",
     "    for index, row in mentions_df.iterrows():\n",
@@ -329,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -337,52 +335,16 @@
      "output_type": "stream",
      "text": [
       "Initializing worker:\n",
-      "getMentions: Got response with 4 tweet(s)\n",
+      "getMentions: Got response with 9 tweet(s)\n",
       "rwCSV: returning DF from CSV\n",
-      "getMentions: adding mention id: 80067314\n",
-      "getMentions: Tweet id: 985700911614918658 is in CSV already or doesn't have a valid mentioned user\n",
       "getMentions: adding mention id: 17842366\n",
-      "getMentions: Tweet id: 983829906302873601 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: adding mention id: 979490736013021184\n",
-      "getMentions: Tweet id: 983757509960839168 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: Tweet id: 983698615347613696 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: No new mentions\n",
-      "worker: trying to read analyzed CSV\n",
-      "rwCSV: returning DF from CSV\n",
-      "worker: user id: 17842366 has already been analyzed\n",
-      "worker: user id: 979490736013021184 has already been analyzed\n",
-      "worker: user id: 80067314 has already been analyzed\n",
-      "Initializing worker:\n",
-      "getMentions: Got response with 5 tweet(s)\n",
-      "rwCSV: returning DF from CSV\n",
-      "getMentions: adding mention id: 25073877\n",
-      "getMentions: adding mention id: 80067314\n",
-      "getMentions: Tweet id: 985700911614918658 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: Tweet id: 987464285654839298 is in CSV already or doesn't have a valid mentioned user\n",
       "getMentions: adding mention id: 17842366\n",
-      "getMentions: Tweet id: 983829906302873601 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: adding mention id: 979490736013021184\n",
-      "getMentions: Tweet id: 983757509960839168 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: Tweet id: 983698615347613696 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: saving new mentions to CSV\n",
-      "rwCSV: appended 1 row(s) to 'results/mentions.csv'\n",
-      "worker: trying to read analyzed CSV\n",
-      "rwCSV: returning DF from CSV\n",
-      "worker: user id: 17842366 has already been analyzed\n",
-      "worker: user id: 979490736013021184 has already been analyzed\n",
-      "worker: user id: 80067314 has already been analyzed\n",
-      "worker: performing sentiment analysis for user_id 25073877\n",
-      "getSentiment: trying to obtain tweets for user id 25073877, page 1\n",
-      "getSentiment: trying to obtain tweets for user id 25073877, page 2\n",
-      "getSentiment: trying to obtain tweets for user id 25073877, page 3\n",
-      "getSentiment: trying to obtain tweets for user id 25073877, page 4\n",
-      "getSentiment: trying to obtain tweets for user id 25073877, page 5\n",
-      "rwCSV: appended 500 row(s) to 'results/sentiment.csv'\n",
-      "worker: performed sentiment analysis for user_id 25073877\n",
-      "worker: generated and tweeted graph for @realDonaldTrump\n",
-      "rwCSV: appended 7 row(s) to 'results/analyzed.csv'\n",
-      "Initializing worker:\n",
-      "getMentions: Got response with 5 tweet(s)\n",
-      "rwCSV: returning DF from CSV\n",
+      "getMentions: Tweet id: 987088667108958208 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: adding mention id: 17842366\n",
+      "getMentions: Tweet id: 986722722301513728 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: adding mention id: 17842366\n",
+      "getMentions: Tweet id: 986624537730142210 is in CSV already or doesn't have a valid mentioned user\n",
       "getMentions: adding mention id: 25073877\n",
       "getMentions: Tweet id: 985713452370055172 is in CSV already or doesn't have a valid mentioned user\n",
       "getMentions: adding mention id: 80067314\n",
@@ -399,63 +361,10 @@
       "worker: user id: 979490736013021184 has already been analyzed\n",
       "worker: user id: 80067314 has already been analyzed\n",
       "worker: user id: 25073877 has already been analyzed\n",
-      "Initializing worker:\n",
-      "getMentions: Got response with 5 tweet(s)\n",
-      "rwCSV: returning DF from CSV\n",
-      "getMentions: adding mention id: 25073877\n",
-      "getMentions: Tweet id: 985713452370055172 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: adding mention id: 80067314\n",
-      "getMentions: Tweet id: 985700911614918658 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: adding mention id: 17842366\n",
-      "getMentions: Tweet id: 983829906302873601 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: adding mention id: 979490736013021184\n",
-      "getMentions: Tweet id: 983757509960839168 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: Tweet id: 983698615347613696 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: No new mentions\n",
-      "worker: trying to read analyzed CSV\n",
-      "rwCSV: returning DF from CSV\n",
       "worker: user id: 17842366 has already been analyzed\n",
-      "worker: user id: 979490736013021184 has already been analyzed\n",
-      "worker: user id: 80067314 has already been analyzed\n",
-      "worker: user id: 25073877 has already been analyzed\n",
-      "Initializing worker:\n",
-      "getMentions: Got response with 5 tweet(s)\n",
-      "rwCSV: returning DF from CSV\n",
-      "getMentions: adding mention id: 25073877\n",
-      "getMentions: Tweet id: 985713452370055172 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: adding mention id: 80067314\n",
-      "getMentions: Tweet id: 985700911614918658 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: adding mention id: 17842366\n",
-      "getMentions: Tweet id: 983829906302873601 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: adding mention id: 979490736013021184\n",
-      "getMentions: Tweet id: 983757509960839168 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: Tweet id: 983698615347613696 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: No new mentions\n",
-      "worker: trying to read analyzed CSV\n",
-      "rwCSV: returning DF from CSV\n",
       "worker: user id: 17842366 has already been analyzed\n",
-      "worker: user id: 979490736013021184 has already been analyzed\n",
-      "worker: user id: 80067314 has already been analyzed\n",
-      "worker: user id: 25073877 has already been analyzed\n",
-      "Initializing worker:\n",
-      "getMentions: Got response with 5 tweet(s)\n",
-      "rwCSV: returning DF from CSV\n",
-      "getMentions: adding mention id: 25073877\n",
-      "getMentions: Tweet id: 985713452370055172 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: adding mention id: 80067314\n",
-      "getMentions: Tweet id: 985700911614918658 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: adding mention id: 17842366\n",
-      "getMentions: Tweet id: 983829906302873601 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: adding mention id: 979490736013021184\n",
-      "getMentions: Tweet id: 983757509960839168 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: Tweet id: 983698615347613696 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: No new mentions\n",
-      "worker: trying to read analyzed CSV\n",
-      "rwCSV: returning DF from CSV\n",
       "worker: user id: 17842366 has already been analyzed\n",
-      "worker: user id: 979490736013021184 has already been analyzed\n",
-      "worker: user id: 80067314 has already been analyzed\n",
-      "worker: user id: 25073877 has already been analyzed\n"
+      "worker: user id: 17842366 has already been analyzed\n"
      ]
     },
     {
@@ -465,7 +374,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-222-5624cac36140>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Initializing worker:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mworker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m300\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-9-5624cac36140>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Initializing worker:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mworker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m300\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -487,6 +396,17 @@
     "1. Bot of a fellow student appeares to be tweeting neutral texts\n",
     "2. @Discovery tends to be more positive\n",
     "3. @ITSJPODirector is vastly positive on twitter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Links to tweets with analysis:\n",
+    "1. https://twitter.com/MindThatData/status/985713668586434560\n",
+    "2. https://twitter.com/MindThatData/status/985711546809683969\n",
+    "3. https://twitter.com/MindThatData/status/985711520368689152\n",
+    "4. https://twitter.com/MindThatData/status/985711498025734145"
    ]
   },
   {
