Add Step 1 description to the notebook

--- a/HonoluluPy/data_engineering.ipynb
+++ b/HonoluluPy/data_engineering.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 1 - Data Engineering\n",
+    "\n",
+    "The climate data for Hawaii is provided through two CSV files. Start by using Python and Pandas to inspect the content of these files and clean the data.\n",
+    "\n",
+    "Create a Jupyter Notebook file called data_engineering.ipynb and use this to complete all of your Data Engineering tasks.\n",
+    "\n",
+    "Use Pandas to read in the measurement and station CSV files as DataFrames.\n",
+    "\n",
+    "Inspect the data for NaNs and missing values. You must decide what to do with this data.\n",
+    "\n",
+    "Save your cleaned CSV files with the prefix clean_."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
