Add step 4 to the notebook

--- a/HonoluluPy/climate_analysis.ipynb
+++ b/HonoluluPy/climate_analysis.ipynb
@@ -1,6 +1,188 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 3 - Climate Analysis and Exploration\n",
+    "\n",
+    "You are now ready to use Python and SQLAlchemy to do basic climate analysis and data exploration on your new weather station tables. All of the following analysis should be completed using SQLAlchemy ORM queries, Pandas, and Matplotlib.\n",
+    "\n",
+    "* Create a Jupyter Notebook file called `climate_analysis.ipynb` and use it to complete your climate analysis and data exporation.\n",
+    "\n",
+    "* Choose a start date and end date for your trip. Make sure that your vacation range is approximately 3-15 days total.\n",
+    "\n",
+    "* Use SQLAlchemy `create_engine` to connect to your sqlite database.\n",
+    "\n",
+    "* Use SQLAlchemy `automap_base()` to reflect your tables into classes and save a reference to those classes called `Station` and `Measurement`.\n",
+    "\n",
+    "### Precipitation Analysis\n",
+    "\n",
+    "* Design a query to retrieve the last 12 months of precipitation data.\n",
+    "\n",
+    "* Select only the `date` and `prcp` values.\n",
+    "\n",
+    "* Load the query results into a Pandas DataFrame and set the index to the date column.\n",
+    "\n",
+    "* Plot the results using the DataFrame `plot` method.\n",
+    "\n",
+    "<center><img src='images/precip.png' /></center>\n",
+    "\n",
+    "* Use Pandas to print the summary statistics for the precipitation data.\n",
+    "\n",
+    "### Station Analysis\n",
+    "\n",
+    "* Design a query to calculate the total number of stations.\n",
+    "\n",
+    "* Design a query to find the most active stations.\n",
+    "\n",
+    "  * List the stations and observation counts in descending order\n",
+    "\n",
+    "  * Which station has the highest number of observations?\n",
+    "\n",
+    "* Design a query to retrieve the last 12 months of temperature observation data (tobs).\n",
+    "\n",
+    "  * Filter by the station with the highest number of observations.\n",
+    "\n",
+    "  * Plot the results as a histogram with `bins=12`.\n",
+    "\n",
+    "  <center><img src='images/temp_hist.png' height=\"400px\" /></center>\n",
+    "\n",
+    "### Temperature Analysis\n",
+    "\n",
+    "* Write a function called `calc_temps` that will accept a start date and end date in the format `%Y-%m-%d` and return the minimum, average, and maximum temperatures for that range of dates.\n",
+    "\n",
+    "* Use the `calc_temps` function to calculate the min, avg, and max temperatures for your trip using the matching dates from the previous year (i.e. use \"2017-01-01\" if your trip start date was \"2018-01-01\")\n",
+    "\n",
+    "* Plot the min, avg, and max temperature from your previous query as a bar chart.\n",
+    "\n",
+    "  * Use the average temperature as the bar height.\n",
+    "\n",
+    "  * Use the peak-to-peak (tmax-tmin) value as the y error bar (yerr).\n",
+    "\n",
+    "<center><img src='images/temp_avg.png' height=\"400px\"/></center>\n",
+    "\n",
+    "\n",
+    "### Optional Recommended Analysis\n",
+    "\n",
+    "* The following are optional challenge queries. These are highly recommended to attempt, but not required for the homework.\n",
+    "\n",
+    "  * Calcualte the rainfall per weather station using the previous year's matching dates.\n",
+    "\n",
+    "* Calculate the daily normals. Normals are the averages for min, avg, and max temperatures.\n",
+    "\n",
+    "  * Create a function called `daily_normals` that will calculate the daily normals for a specific date. This date string will be in the format `%m-%d`. Be sure to use all historic tobs that match that date string.\n",
+    "\n",
+    "  * Create a list of dates for your trip in the format `%m-%d`. Use the `daily_normals` function to calculate the normals for each date string and append the results to a list.\n",
+    "\n",
+    "  * Load the list of daily normals into a Pandas DataFrame and set the index equal to the date.\n",
+    "\n",
+    "  * Use Pandas to plot an area plot (`stacked=False`) for the daily normals.\n",
+    "\n",
+    "  <center><img src=\"images/daily_normals.png\" /></center>\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4 - Climate App\n",
+    "\n",
+    "Now that you have completed your initial analysis, design a Flask api based on the queries that you have just developed.\n",
+    "\n",
+    "* Use FLASK to create your routes.\n",
+    "\n",
+    "### Routes\n",
+    "\n",
+    "* `/api/v1.0/precipitation`\n",
+    "\n",
+    "  * Query for the dates and temperature observations from the last year.\n",
+    "\n",
+    "  * Convert the query results to a Dictionary using `date` as the key and `tobs` as the value.\n",
+    "\n",
+    "  * Return the json representation of your dictionary.\n",
+    "\n",
+    "* `/api/v1.0/stations`\n",
+    "\n",
+    "  * Return a json list of stations from the dataset.\n",
+    "\n",
+    "* `/api/v1.0/tobs`\n",
+    "\n",
+    "  * Return a json list of Temperature Observations (tobs) for the previous year\n",
+    "\n",
+    "* `/api/v1.0/<start>` and `/api/v1.0/<start>/<end>`\n",
+    "\n",
+    "  * Return a json list of the minimum temperature, the average temperature, and the max temperature for a given start or start-end range.\n",
+    "\n",
+    "  * When given the start only, calculate `TMIN`, `TAVG`, and `TMAX` for all dates greater than and equal to the start date.\n",
+    "\n",
+    "  * When given the start and the end date, calculate the `TMIN`, `TAVG`, and `TMAX` for dates between the start and end date inclusive.\n",
+    "\n",
+    "## Hints\n",
+    "\n",
+    "* You will need to join the station and measurement tables for some of the analysis queries.\n",
+    "\n",
+    "* Use Flask `jsonify` to convert your api data into a valid json response object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
