--- a/HonoluluPy/database_engineering.ipynb
+++ b/HonoluluPy/database_engineering.ipynb
@@ -1,6 +1,185 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 2 - Database Engineering\n",
+    "\n",
+    "Use SQLAlchemy to model your table schemas and create a sqlite database for your tables. You will need one table for measurements and one for stations.\n",
+    "\n",
+    "* Create a Jupyter Notebook called `database_engineering.ipynb` and use this to complete all of your Database Engineering work.\n",
+    "\n",
+    "* Use Pandas to read your cleaned measurements and stations CSV data.\n",
+    "\n",
+    "* Use the `engine` and connection string to create a database called `hawaii.sqlite`.\n",
+    "\n",
+    "* Use `declarative_base` and create ORM classes for each table.\n",
+    "\n",
+    "  * You will need a class for `Measurement` and for `Station`.\n",
+    "\n",
+    "  * Make sure to define your primary keys.\n",
+    "\n",
+    "* Once you have your ORM classes defined, create the tables in the database using `create_all`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import sqlalchemy\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "from sqlalchemy.orm import Session, relation, sessionmaker\n",
+    "from sqlalchemy import create_engine, func\n",
+    "# Import modules to declare columns and column data types\n",
+    "from sqlalchemy import Column, Integer, String, Float, DateTime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "measures = pd.read_csv('resources/clean_measurement.csv')\n",
+    "stations = pd.read_csv('resources/clean_stations.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = create_engine(\"sqlite:///resources/hawaii.sqlite\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Base = declarative_base()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Measurement(Base):\n",
+    "    __tablename__ = 'measurement'\n",
+    "    id = Column(Integer, primary_key=True)\n",
+    "    station = Column(String(11))#, ForeignKey(\"station.station\"))\n",
+    "    \n",
+    "    #directed_by = Column(Integer, ForeignKey('directors.id'))\n",
+    "    \n",
+    "    #station = relation('Stations', backref='measurement', lazy=False)\n",
+    "    \n",
+    "    date = Column(DateTime)\n",
+    "    prcp = Column(Float)\n",
+    "    tobs = Column(Float)\n",
+    "\n",
+    "class Station(Base):\n",
+    "    __tablename__ = 'station'\n",
+    "    id = Column(Integer, primary_key=True)\n",
+    "    station = Column(String(11))\n",
+    "    name = Column(String(255))\n",
+    "    latitude = Column(Float)\n",
+    "    longitude = Column(Float)\n",
+    "    elevation = Column(Float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = engine.connect()\n",
+    "Base.metadata.create_all(conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save DFs to sql\n",
+    "measures.to_sql('measurement',engine, if_exists='append',index_label='id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stations.to_sql('station',engine, if_exists='append',index_label='id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
