Add data engineering update

--- a/HonoluluPy/data_engineering.ipynb
+++ b/HonoluluPy/data_engineering.ipynb
@@ -4,17 +4,153 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 1 - Data Engineering\n",
+    "## Step 1 - Data Engineering\n",
     "\n",
     "The climate data for Hawaii is provided through two CSV files. Start by using Python and Pandas to inspect the content of these files and clean the data.\n",
     "\n",
-    "Create a Jupyter Notebook file called data_engineering.ipynb and use this to complete all of your Data Engineering tasks.\n",
+    "* Create a Jupyter Notebook file called `data_engineering.ipynb` and use this to complete all of your Data Engineering tasks.\n",
     "\n",
-    "Use Pandas to read in the measurement and station CSV files as DataFrames.\n",
+    "* Use Pandas to read in the measurement and station CSV files as DataFrames.\n",
     "\n",
-    "Inspect the data for NaNs and missing values. You must decide what to do with this data.\n",
+    "* Inspect the data for NaNs and missing values. You must decide what to do with this data.\n",
     "\n",
-    "Save your cleaned CSV files with the prefix clean_."
+    "* Save your cleaned CSV files with the prefix `clean_`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "measures_df = pd.read_csv('resources/hawaii_measurements.csv')\n",
+    "stations_df = pd.read_csv('resources/hawaii_stations.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>date</th>\n",
+       "      <th>prcp</th>\n",
+       "      <th>tobs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-03</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-04</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       station        date  prcp  tobs\n",
+       "0  USC00519397  2010-01-01  0.08    65\n",
+       "1  USC00519397  2010-01-02  0.00    63\n",
+       "2  USC00519397  2010-01-03  0.00    74\n",
+       "3  USC00519397  2010-01-04  0.00    76\n",
+       "4  USC00519397  2010-01-06   NaN    73"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "measures_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save Precipitation data\n",
+    "#measures_df[['station','date','prcp']].dropna().to_csv('resources/clean_prcp.csv')\n",
+    "\n",
+    "#save Temperature data\n",
+    "#measures_df[['station','date','tobs']].dropna().to_csv('resources/clean_tobs.csv')\n",
+    "\n",
+    "#dropping nas does not have significant impact to statistical coeffs of data\n",
+    "#so storring everything with dropped values\n",
+    "measures_df.fillna(0).to_csv('resources/clean_measurement.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save Statiosn data\n",
+    "stations_df.to_csv('resources/clean_stations.csv', index=False)"
    ]
   },
   {
