--- a/HonoluluPy/database_engineering.ipynb
+++ b/HonoluluPy/database_engineering.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +35,12 @@
     "from sqlalchemy.orm import Session, relation, sessionmaker\n",
     "from sqlalchemy import create_engine, func\n",
     "# Import modules to declare columns and column data types\n",
-    "from sqlalchemy import Column, Integer, String, Float, DateTime"
+    "from sqlalchemy import Column, Integer, String, Float, Date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,20 +68,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Measurement(Base):\n",
     "    __tablename__ = 'measurement'\n",
     "    id = Column(Integer, primary_key=True)\n",
-    "    station = Column(String(11))#, ForeignKey(\"station.station\"))\n",
-    "    \n",
-    "    #directed_by = Column(Integer, ForeignKey('directors.id'))\n",
-    "    \n",
-    "    #station = relation('Stations', backref='measurement', lazy=False)\n",
-    "    \n",
-    "    date = Column(DateTime)\n",
+    "    station = Column(String(11))\n",
+    "    date = Column(Date)\n",
     "    prcp = Column(Float)\n",
     "    tobs = Column(Float)\n",
     "\n",
@@ -97,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
